fixed card bg image not showing

--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ h1 {
     transition: transform 1s;
     -webkit-transform-style: preserve-3d;
     transform-style: preserve-3d;
-    
+
     position: relative;
     width: 100%;
     height: 100%;
@@ -81,11 +81,12 @@ h1 {
     -webkit-transform: rotateY(0deg);
     transform: rotateY(0deg);
 
-    background-image: url("flower.jpg");
+    background-image: url("./flower.jpg");
     background-repeat: no-repeat;
-    /* background-attachment: fixed; */
     background-size: cover;
+    background-position: center;
     color: #333;
+    z-index: 1;
 }
 
 .card-front::before {
